fix favicon and image distortion on eii

--- a/frontend/src/components/EventIndexItem/EventIndexItem.css
+++ b/frontend/src/components/EventIndexItem/EventIndexItem.css
@@ -98,6 +98,7 @@
 #event-thumbnail > img {
     width: 100%;
     height: 100%;
+    object-fit: cover;
 }
 
 #follower-count-real {
